--- a/css/main.css
+++ b/css/main.css
@@ -1,51 +1,57 @@
-body {
+html, body {
     color: white;
     background-color: rgb(13, 13, 24);
     font-family: fantasy;
+    overflow: hidden;
+    height: 100%;
 }
 
 nav {
     height: 10%;
-    width: inherit;
+    width: 100%;
+    transition: all 0.75s ease-in-out;
 }
 #nav_container{
     display: inline-flex;
-    justify-content: center;
+    height: 100%;
+    width: 100%;
+    justify-content: left;
+    transition: all 0.75s ease-in-out;
 }
 #nav_hover {
+    width: 20%;
+    height: 80%;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.75s ease-in-out;
+}
+
+#nav_time{
     font-size: 48px;
-    text-align: center;
+    height: 100%;
     width: 100%;
-    height: 100%;
-    transition: all 0.5s ease-in-out;
-}
-
-#nav_hover > h1 {
-    height: 100%;
-    vertical-align: middle;
     line-height: 200%;
-    transition: all 0.5s ease-in-out;
-    animation: neon1 1.5s ease-in-out infinite alternate;
+    text-align: left;
+    color: #fff;
+    -webkit-transition: all 0.75s ease-in-out;
+    transition: all 0.75s ease-in-out;
+    -webkit-animation: neon 1.5s ease-in-out infinite alternate;
+    animation: neon 1.5s ease-in-out infinite alternate;
 }
 
-#nav_portal {
-    width: inherit;
-    height: 100%;
-    transition: all 0.5s ease-in-out;
+#nav_line{
+    background: white;
+    margin: auto 0;
+    width: 0;
+    height: 1%;
+    -webkit-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in;
+    -webkit-animation: bg 1.5s ease-in-out infinite alternate;
+    animation: bg 1.5s ease-in-out infinite alternate;
 }
 
-#nav_portal > span {
-    float: left;
-    width: 25%;
-    height: 100%;
-    text-align: center;
-    font-size: 24px;
-}
-
-#nav_portal > span > a {
-    height: 100%;
-    line-height: 100px;
-    animation: neon1 1.5s ease-in-out infinite alternate;
+#nav_hover:hover ~ #nav_line{
+    width: 80%;
+    background-color: rgb(255, 172, 17);
 }
 
 .wrapper {
@@ -58,9 +64,9 @@ nav {
 #slide {
     height: 80%;
     width: 100%;
-    overflow:hidden;
-    white-space: nowrap;
-    animation: bg1 1.5s ease-in-out infinite alternate;
+    -webkit-animation: bg 1.5s ease-in-out infinite alternate;
+    animation: bg 1.5s ease-in-out infinite alternate;
+    transition: all 0.75s ease-in-out;
 }
 
 #slide_container{
@@ -73,6 +79,7 @@ nav {
 
 .slide_cats{
     width: 25%;
+    -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
 }
 
@@ -87,7 +94,7 @@ nav {
 }
 
 
-@-webkit-keyframes neon1 {
+@-webkit-keyframes neon {
     from {
       text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px rgb(255, 172, 17), 0 0 70px rgb(255, 172, 17), 0 0 80px rgb(255, 172, 17), 0 0 100px #FF1177, 0 0 150px #FF1177;
     }
@@ -96,7 +103,16 @@ nav {
     }
   }
 
-  @-webkit-keyframes bg1 {
+  @-webkit-keyframes neon_white {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px rgb(255, 172, 17), 0 0 40px #FF1177,  0 0 40px #FF1177;
+    }
+    to {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px rgb(255, 172, 17), 0 0 20px #FF1177,  0 0 20px #FF1177;
+    }
+  }
+
+  @-webkit-keyframes bg {
     from {
       box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px rgb(255, 172, 17), 0 0 70px rgb(255, 172, 17), 0 0 80px rgb(255, 172, 17), 0 0 100px #FF1177, 0 0 150px #FF1177;
     }
