--- a/css/main.css
+++ b/css/main.css
@@ -2,63 +2,48 @@ html, body {
     color: white;
     background-color: rgb(13, 13, 24);
     font-family: fantasy;
-    overflow: hidden;
+    overflow-y: hidden;
     height: 100%;
 }
 
 nav {
-    height: 10%;
+    height: 98px;
     width: 100%;
-    transition: all 0.75s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
+
+#wrapper {
+    width: 80vw;
+    height: 100%;
+    background: rgb(13, 13, 24);
+    margin: 0 auto;
+}
+
 #nav_container{
     display: inline-flex;
     height: 100%;
     width: 100%;
     justify-content: left;
-    transition: all 0.75s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 #nav_hover {
     width: 20%;
     height: 80%;
     -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.75s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 #nav_time{
-    font-size: 48px;
+    font-size: 300%;
     height: 100%;
     width: 100%;
     line-height: 200%;
     text-align: left;
     color: #fff;
-    -webkit-transition: all 0.75s ease-in-out;
-    transition: all 0.75s ease-in-out;
-    -webkit-animation: neon 1.5s ease-in-out infinite alternate;
-    animation: neon 1.5s ease-in-out infinite alternate;
-}
-
-#nav_line{
-    background: white;
-    margin: auto 0;
-    width: 0;
-    height: 1%;
-    -webkit-transition: all 0.25s ease-in-out;
-    transition: all 0.25s ease-in;
-    -webkit-animation: bg 1.5s ease-in-out infinite alternate;
-    animation: bg 1.5s ease-in-out infinite alternate;
-}
-
-#nav_hover:hover ~ #nav_line{
-    width: 80%;
-    background-color: rgb(255, 172, 17);
-}
-
-.wrapper {
-    width: 80vw;
-    height: 100vh;
-    background: rgb(13, 13, 24);
-    margin: 0 auto;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 #slide {
@@ -66,7 +51,8 @@ nav {
     width: 100%;
     -webkit-animation: bg 1.5s ease-in-out infinite alternate;
     animation: bg 1.5s ease-in-out infinite alternate;
-    transition: all 0.75s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 #slide_container{
@@ -79,44 +65,33 @@ nav {
 
 .slide_cats{
     width: 25%;
+    background: orange;
     -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
+    will-change: auto;
 }
+
 
 .slide_cats img{
     object-fit: cover;
+    width: 100%;
     object-position: 50% 0px;
 }
 
 .slide_cats:hover{
     z-index: 2;
-    width: 500%;
+    width: 400%;
 }
 
-
-@-webkit-keyframes neon {
+  @keyframes bg {
     from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px rgb(255, 172, 17), 0 0 70px rgb(255, 172, 17), 0 0 80px rgb(255, 172, 17), 0 0 100px #FF1177, 0 0 150px #FF1177;
+      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 
+      0 0 40px rgb(255, 172, 17), 0 0 70px rgb(255, 172, 17), 0 0 80px rgb(255, 172, 17),
+       0 0 100px #FF1177, 0 0 150px #FF1177;
     }
     to {
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px rgb(255, 172, 17), 0 0 35px rgb(255, 172, 17), 0 0 40px rgb(255, 172, 17), 0 0 50px #FF1177, 0 0 75px #FF1177;
-    }
-  }
-
-  @-webkit-keyframes neon_white {
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px rgb(255, 172, 17), 0 0 40px #FF1177,  0 0 40px #FF1177;
-    }
-    to {
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px rgb(255, 172, 17), 0 0 20px #FF1177,  0 0 20px #FF1177;
-    }
-  }
-
-  @-webkit-keyframes bg {
-    from {
-      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px rgb(255, 172, 17), 0 0 70px rgb(255, 172, 17), 0 0 80px rgb(255, 172, 17), 0 0 100px #FF1177, 0 0 150px #FF1177;
-    }
-    to {
-        box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px rgb(255, 172, 17), 0 0 35px rgb(255, 172, 17), 0 0 40px rgb(255, 172, 17), 0 0 50px #FF1177, 0 0 75px #FF1177;
+        box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 
+        0 0 20px rgb(255, 172, 17), 0 0 35px rgb(255, 172, 17), 0 0 40px rgb(255, 172, 17),
+         0 0 50px #FF1177, 0 0 75px #FF1177;
     }
   }
