--- a/style_mobile.css
+++ b/style_mobile.css
@@ -17,7 +17,8 @@
 }
 
 .main_sector{
-    background: url("imgs/main_bg.png");
+    background: url("imgs/second_bg.jpg");
+    background-position-x: 20%;
     background-repeat: no-repeat;
     height: 979px;
 }
