--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
+    transition: all 0.5 ease;
 }
 
 .slide{
@@ -183,7 +184,12 @@
     box-shadow: 12px 6px 8px rgb(21, 14, 27);
     transition: all 0.5s ease;
 }
-
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.5 ease;
+}
 .slide:hover{
     opacity: 1;
     z-index: 3;
