--- a/style_min.css
+++ b/style_min.css
@@ -183,13 +183,18 @@
     box-shadow: 12px 6px 8px rgb(21, 14, 27);
     transition: all 0.5s ease;
 }
-
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.5 ease;
+}
 .slide:hover{
     opacity: 1;
     z-index: 3;
     height: 40%;
     width: 456px;
-    transform: translate(-40px, 0px);
+    transform: translate(-40, 0px);
     box-shadow: 24px 12px 8px rgb(21, 14, 27);
 }
 
