--- a/style_mobile.css
+++ b/style_mobile.css
@@ -199,13 +199,19 @@
     box-shadow: 12px 6px 8px rgb(21, 14, 27);
 }
 
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.5 ease;
+}
 .slide:hover{
     opacity: 1;
     z-index: 3;
-    height: 130%;
-    width: 130%;
-    transform: translate(0px, -13%);
-    box-shadow: 24px 12px 8px rgb(21, 14, 27);
+    height: 90%;
+    width: 700%;
+    transform: translate(0px, 10px);
+    box-shadow: 0px 6px 4px rgb(21, 14, 27);
 }
 
 .social{
