--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 .main_sector{
-    background: url("imgs/main_bg.png");
+    background: url("imgs/scorched_earth_by_arcipello_d5118nz.jpg");
     background-repeat: no-repeat;
     height: 979px;
 }
