background update & style change
changed mobile font size
changed background

--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@
     position: relative;
     overflow: hidden;
     box-sizing: content-box;
-    padding: 0px 12px 0px 12px;
+    padding: 0px 0px 0px 0px;
     background: white;
 }
 
 .main_sector{
-    background: url("imgs/scorched_earth_by_arcipello_d5118nz.jpg");
+    background: url("imgs/main_bg2.png");
     background-repeat: no-repeat;
     height: 979px;
 }
