--- a/style_mobile.css
+++ b/style_mobile.css
@@ -177,22 +177,22 @@
     position: relative;
     top: 48px;
     width: 100%;
-    height: 200px;
+    height: 300px;
 }
 
 .content_offset{
     height: inherit;
     width: 100%;
     display: inline-flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 }
 
 .slide{
     object-fit: cover;
-    width: 33.3%;
-    height: 100%;
-    opacity: 0.25;
+    width: 100%;
+    height: 33.3%;
+    opacity: 0.5;
     z-index: 0;
     transition: all 0.5s ease;
     overflow: hidden;
@@ -209,8 +209,7 @@
     opacity: 1;
     z-index: 3;
     height: 90%;
-    width: 700%;
-    transform: translate(0px, 10px);
+    width: 100%;
     box-shadow: 0px 6px 4px rgb(21, 14, 27);
 }
 
