--- a/style_mobile.css
+++ b/style_mobile.css
@@ -155,6 +155,10 @@
     position: relative;
 }
 
+.texts_container a{
+    color: dodgerblue;
+}
+
 .content_texts{
     color: white;
     width: 100%;
