--- a/style.css
+++ b/style.css
@@ -6,14 +6,21 @@
     font-family: custom-normal;
     src: url(GeosansLight.ttf);
 }
+body{
+    zoom: 1;
+    transform: scale(1.0);
+    transform-origin: 0 0;
+}
+
 .wrapper{
+    opacity: 0;
     font-family: custom-normal;
-    max-width: 100%;
+    max-width: 1920px;
     margin: auto;
     position: relative;
     overflow: hidden;
     box-sizing: content-box;
-    padding: 0px 0px 0px 0px;
+    padding: 0px;
     background: white;
 }
 
@@ -25,23 +32,30 @@
 
 .anchor_panel{
     position: absolute;
-    top: 50px;
-    left: 65vw;
+    top: 114px;
+    left: 75%;
     z-index: 1;
     color: white;
     width: 256px;
-    height: 512px;
-    margin-top: 64px;
+    height: 480px;
     display: inline-flex;
-    justify-content: center;
+    justify-content: center; 
 }
+
 .anchor_line{
     width: 2px;
     height: 420px;
     background: white;
     margin: 32px 0px;
-    box-shadow: 16px 32px 4px rgba(255, 204, 36, 0.25);
+    transition: transform 0.5s ease;
+    will-change: all;
+    box-shadow: 16px 32px 8px rgba(255, 165, 29, 0.384); 
 }
+
+.anchor_panel:hover > .anchor_line{
+    transform: scaleY(0.5);
+}
+
 .anchor_panel ul{
     position: relative;
     top: 32px;
@@ -51,13 +65,13 @@
     font-size: 24px;
     margin: 64px 72px;
     margin-right: 32px;
-    text-shadow: 32px 16px 4px rgba(255, 204, 36, 0.25);
+    text-shadow: 32px 16px 4px rgba(255, 165, 29, 0.384);
     transition: text-shadow 0.5s ease;
     will-change: text-shadow;
 }
 
 .anchor_panel li:hover{
-    text-shadow: 8px 4px 0px rgba(255, 246, 215, 0.75);
+    text-shadow: 8px 4px 2px rgba(255, 221, 158, 0.829);
 }
 
 .info{
@@ -97,12 +111,12 @@
     font-size: 48px;
     position: relative;
     width: 256px;
-    text-shadow: 32px 16px 4px rgba(102, 121, 163, 0.5);
+    text-shadow: 32px 16px 4px rgba(255, 165, 29, 0.384);
     transition: text-shadow 0.5s ease;
     will-change: text-shadow;
 }
 .info_header:hover{
-    text-shadow: 6px 6px 0px rgba(102, 121, 163, 0.5);
+    text-shadow: 6px 6px 2px rgba(255, 165, 29, 0.384);
 }
 .info_header:hover ~ .info_desc{
     width: 512px;
@@ -116,7 +130,7 @@
     opacity: 0;
     height: 26px;
     overflow: hidden;
-    text-shadow: 6px 6px 0px rgba(102, 121, 163, 0.5);
+    text-shadow: 6px 6px 2px rgba(255, 165, 29, 0.384);
     transition: all 0.5s ease;
     will-change: all;
 }
@@ -164,7 +178,7 @@
 
 .content_slideshow{
     position: absolute;
-    left: 36vw;
+    left: 41%;
     width: 35%;
     height: 100%;
 }
@@ -185,7 +199,7 @@
     height: 33%;
     opacity: 0.25;
     z-index: 0;
-    box-shadow: 12px 6px 8px rgb(21, 14, 27);
+    box-shadow: 4px 4px 8px rgba(58, 35, 0, 0.384);
     transition: all 0.5s ease;
 }
 .slide img {
@@ -197,10 +211,10 @@
 .slide:hover{
     opacity: 1;
     z-index: 3;
-    height: 18vw;
+    height: 60%;
     width: 112.5%;
     transform: translate(-5%, 0px);
-    box-shadow: 24px 12px 8px rgb(21, 14, 27);
+    box-shadow: 12px 24px 8px rgba(70, 47, 16, 0.25);
 }
 
 .social{
