--- a/style_min.css
+++ b/style_min.css
@@ -6,6 +6,11 @@
     font-family: custom-normal;
     src: url(GeosansLight.ttf);
 }
+body{
+    zoom: 1;
+    transform: scale(1.0);
+    transform-origin: 0 0;
+}
 .wrapper{
     font-family: custom-normal;
     width: 1366px;
@@ -13,10 +18,9 @@
     position: relative;
     overflow: hidden;
     box-sizing: content-box;
-    padding: 0px 0px 0px 0px;
+    padding: 0px;
     background: white;
 }
-
 .main_sector{
     background: url("imgs/main_bg2.png");
     background-repeat: no-repeat;
@@ -25,23 +29,29 @@
 
 .anchor_panel{
     position: absolute;
-    top: 50px;
+    top: 114px;
     left: 833px;
     z-index: 1;
     color: white;
     width: 256px;
     height: 512px;
-    margin-top: 64px;
     display: inline-flex;
     justify-content: center;
 }
+
 .anchor_line{
     width: 2px;
     height: 420px;
     background: white;
     margin: 32px 0px;
-    box-shadow: 16px 32px 4px rgba(255, 204, 36, 0.25);
+    transition: transform 0.5s ease;
+    will-change: all;
+    box-shadow: 16px 32px 8px rgba(255, 165, 29, 0.384); 
 }
+.anchor_panel:hover > .anchor_line{
+    transform: scaleY(0.5);
+}
+
 .anchor_panel ul{
     position: relative;
     top: 32px;
@@ -51,13 +61,13 @@
     font-size: 24px;
     margin: 64px 72px;
     margin-right: 32px;
-    text-shadow: 32px 16px 4px rgba(255, 204, 36, 0.25);
+    text-shadow: 32px 16px 4px rgba(255, 165, 29, 0.384);
     transition: text-shadow 0.5s ease;
     will-change: text-shadow;
 }
 
 .anchor_panel li:hover{
-    text-shadow: 8px 4px 0px rgba(255, 246, 215, 0.75);
+    text-shadow: 8px 4px 2px rgba(255, 221, 158, 0.829);
 }
 
 .info{
@@ -97,12 +107,12 @@
     font-size: 48px;
     position: relative;
     width: 256px;
-    text-shadow: 32px 16px 4px rgba(102, 121, 163, 0.5);
+    text-shadow: 32px 16px 4px rgba(255, 165, 29, 0.384);
     transition: text-shadow 0.5s ease;
     will-change: text-shadow;
 }
 .info_header:hover{
-    text-shadow: 6px 6px 0px rgba(102, 121, 163, 0.5);
+    text-shadow: 6px 6px 2px rgba(255, 165, 29, 0.384);
 }
 .info_header:hover ~ .info_desc{
     width: 512px;
@@ -116,7 +126,7 @@
     opacity: 0;
     height: 26px;
     overflow: hidden;
-    text-shadow: 6px 6px 0px rgba(102, 121, 163, 0.5);
+    text-shadow: 6px 6px 2px rgba(255, 165, 29, 0.384);
     transition: all 0.5s ease;
     will-change: all;
 }
@@ -184,7 +194,7 @@
     height: 33%;
     opacity: 0.25;
     z-index: 0;
-    box-shadow: 12px 6px 8px rgb(21, 14, 27);
+    box-shadow: 4px 4px 8px rgba(58, 35, 0, 0.384);
     transition: all 0.5s ease;
 }
 .slide img {
@@ -198,8 +208,8 @@
     z-index: 3;
     height: 40%;
     width: 456px;
-    transform: translate(-40, 0px);
-    box-shadow: 24px 12px 8px rgb(21, 14, 27);
+    transform: translate(-40px, 0px);
+    box-shadow: 12px 24px 8px rgba(70, 47, 16, 0.25);
 }
 
 .social{
