--- a/style_mobile.css
+++ b/style_mobile.css
@@ -53,8 +53,14 @@
     width: 80%;
     height: 2px;
     background: white;
-    box-shadow: 8px 16px 4px rgba(255, 204, 36, 0.25);
+    transition: transform 0.5s ease;
+    will-change: all;
+    box-shadow: 8px 16px 4px rgba(255, 165, 29, 0.384);
 }
+.anchor_panel:hover > .anchor_line{
+    transform: scaleX(0.5);
+}
+
 .anchor_panel ul{
     position: relative;
     display: inline-flex;
@@ -66,13 +72,13 @@
     margin: auto 3%;
     font-size: 16px;
     text-align: center;
-    text-shadow: 12px 6px 4px rgba(255, 204, 36, 0.25);
+    text-shadow: 12px 6px 4px rgba(255, 165, 29, 0.384);
     transition: text-shadow 0.5s ease;
     will-change: text-shadow;
 }
 
 .anchor_panel li:hover{
-    text-shadow: 8px 4px 0px rgba(255, 246, 215, 0.75);
+    text-shadow: 8px 4px 2px rgba(255, 221, 158, 0.829);
 }
 
 .info_texts{
@@ -115,12 +121,12 @@
     width: 256px;
     height: 48px;
     margin: 0 auto;
-    text-shadow: 24px 12px 4px rgba(102, 121, 163, 0.5);
+    text-shadow: 24px 12px 4px rgba(255, 165, 29, 0.384);
     transition: text-shadow 0.5s ease;
     will-change: text-shadow;
 }
 .info_header:hover{
-    text-shadow: 6px 6px 0px rgba(102, 121, 163, 0.5);
+    text-shadow: 6px 6px 2px rgba(255, 165, 29, 0.384);
 }
 .info_header:hover ~ .info_desc{
     height: 48px;
@@ -133,7 +139,7 @@
     opacity:0;
     height: 0px;
     overflow: hidden;
-    text-shadow: 6px 6px 0px rgba(102, 121, 163, 0.5);
+    text-shadow: 6px 6px 2px rgba(255, 165, 29, 0.384);
     transition: all 0.5s ease;
     will-change: all;
 }
@@ -200,7 +206,7 @@
     z-index: 0;
     transition: all 0.5s ease;
     overflow: hidden;
-    box-shadow: 12px 6px 8px rgb(21, 14, 27);
+    box-shadow: 12px 6px 8px rgba(58, 35, 0, 0.384);
 }
 
 .slide img {
@@ -214,7 +220,7 @@
     z-index: 3;
     height: 90%;
     width: 100%;
-    box-shadow: 0px 6px 4px rgb(21, 14, 27);
+    box-shadow: 0px 6px 4px rgba(70, 47, 16, 0.25);
 }
 
 .social{
