--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     zoom: 1;
     transform: scale(1.0);
     transform-origin: 0 0;
+    background: black;
 }
 
 .wrapper{
@@ -21,11 +22,10 @@ body{
     overflow: hidden;
     box-sizing: content-box;
     padding: 0px;
-    background: white;
+    background: black;
 }
 
-.main_sector{
-    background: url("imgs/main_bg2.png");
+.main_sector{  
     background-repeat: no-repeat;
     height: 979px;
 }
@@ -136,6 +136,7 @@ body{
 }
 
 .panel{
+    opacity: 0;
     position: relative;
     height: 592px;
     width: 87%;
