--- a/style_min.css
+++ b/style_min.css
@@ -10,6 +10,7 @@ body{
     zoom: 1;
     transform: scale(1.0);
     transform-origin: 0 0;
+    background: black;
 }
 .wrapper{
     opacity: 0;
@@ -20,10 +21,9 @@ body{
     overflow: hidden;
     box-sizing: content-box;
     padding: 0px;
-    background: white;
+    background: black;
 }
 .main_sector{
-    background: url("imgs/main_bg2.png");
     background-repeat: no-repeat;
     height: 979px;
 }
@@ -133,6 +133,7 @@ body{
 }
 
 .panel{
+    opacity: 0;
     position: relative;
     height: 592px;
     width: 1078px;
