--- a/style_min.css
+++ b/style_min.css
@@ -23,8 +23,21 @@ body{
     padding: 0px;
     background: black;
 }
-.main_sector{
+.background{
+    background: url("imgs/bg.jpg");
+    background-position-y: -200px;
     background-repeat: no-repeat;
+    position: fixed;
+    transform-origin: 0 0;
+    top: 0px;
+    transform: scale(1);
+    filter: blur(4px);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+.main_sector{  
     height: 979px;
 }
 
