--- a/style_mobile.css
+++ b/style_mobile.css
@@ -24,9 +24,23 @@ body{
     background: black;
 }
 
-.main_sector{
-    background-position-x: 50%;
+.background{
+    background: url("imgs/bg.jpg");
     background-repeat: no-repeat;
+    position: fixed;
+    transform-origin: 0 0;
+    top: 0px;
+    transform: scale(1);
+    filter: blur(4px);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-position-x: 30%;
+    background-position-y: 40%;
+}
+
+.main_sector{
+
     height: 979px;
 }
 
