--- a/style_min.css
+++ b/style_min.css
@@ -15,7 +15,7 @@ body{
 .wrapper{
     opacity: 0;
     font-family: custom-normal;
-    width: 1366px;
+    width: 1280px;
     margin: auto;
     position: relative;
     overflow: hidden;
@@ -33,8 +33,9 @@ body{
     transform: scale(1);
     filter: blur(4px);
     position: fixed;
-    width: 100%;
+    width: 1280px;
     height: 100%;
+    opacity: 0.5;
 }
 
 .main_sector{  
