--- a/style_mobile.css
+++ b/style_mobile.css
@@ -35,8 +35,9 @@ body{
     position: fixed;
     width: 100%;
     height: 100%;
-    background-position-x: 30%;
+    background-position-x: 40%;
     background-position-y: 40%;
+    opacity: 0.5;
 }
 
 .main_sector{
